justify content end alignment fixed

--- a/index.css
+++ b/index.css
@@ -15,7 +15,6 @@ a:hover {
 .hero {
     height: 90vh;
     width: auto;
-    max-width: 1000px;
 }
 .highlighted-red {
     font-family: 'Raleway';
